Fix: `.color-as-rgb()`/`-hsl()` rounding.
• Wrapped `red`, `green`, and `blue` value code in `round()`.
	» According to the LESS docs red(), green(), and blue() return “integer 0-255”, but the results I'm seeing are full floating-point numbers (after an overlay() or average()).  Looking like a bug in LESS to me.
• Wrapped `hue` value code in `round(…, 3)`.
	» 3 places of precision under a value from `0` to `359.…` should be more than enough, without being excessive.
	» The default looks to be 8 places, which is way too much to be useful, and clumsy for the skrollr code.
• Wrapped `saturation` and `value` value code in `round(…, 2)`.
	» 2 places of precision under a value from `0` to `100` should be more than enough, without being excessive.
	» The default looks to be 8 places (see above).

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -53,15 +53,15 @@
 }
 
 .color-as-rgb(@color) {
-	@red: red(@color);
-	@green: green(@color);
-	@blue: blue(@color);
+	@red: round(red(@color));
+	@green: round(green(@color));
+	@blue: round(blue(@color));
 	@as-rgb: ~"rgb(@{red}, @{green}, @{blue})";
 }
 
 .color-as-hsl(@color) {
-	@hue: hue(@color);
-	@saturation: saturation(@color);
-	@lightness: lightness(@color);
+	@hue: round(hue(@color), 3);
+	@saturation: round(saturation(@color), 2);
+	@lightness: round(lightness(@color), 2);
 	@as-hsl: ~"hsl(@{hue}, @{saturation}, @{lightness})";
 }
